@@ -85,7 +85,7 @@ public class ParserFunctionUtil {
 	 * for a list of Mediawiki parser functions.  If the template name is a parser
 	 * function then return the parser function name and argument.
 	 */
-	protected static String[] parseParserFunctionInfo(String name) {
+	protected static String[] parseParserFunctionInfo(ParserInput parserInput, int mode, String name) throws ParserException {
 		int pos = name.indexOf(':');
 		if (pos == -1 || (pos + 2) > name.length()) {
 			return null;
@@ -103,8 +103,8 @@ public class ParserFunctionUtil {
 	 * function result.  See http://meta.wikimedia.org/wiki/Help:Magic_words for a
 	 * list of Mediawiki parser functions.
 	 */
-	protected static String processParserFunction(ParserInput parserInput, ParserOutput parserOutput, String parserFunction, String parserFunctionArguments) throws DataAccessException, ParserException {
-		String[] parserFunctionArgumentArray = ParserFunctionUtil.parseParserFunctionArgumentArray(parserFunctionArguments);
+	protected static String processParserFunction(ParserInput parserInput, ParserOutput parserOutput, int mode, String parserFunction, String parserFunctionArguments) throws DataAccessException, ParserException {
+		String[] parserFunctionArgumentArray = ParserFunctionUtil.parseParserFunctionArgumentArray(parserInput, mode, parserFunctionArguments);
 		if (parserFunction.equals(PARSER_FUNCTION_ANCHOR_ENCODE)) {
 			return Utilities.encodeAndEscapeTopicName(parserFunctionArgumentArray[0]);
 		}
@@ -425,7 +425,7 @@ public class ParserFunctionUtil {
 	 * Parse parser function arguments of the form "arg1|arg2", trimming excess whitespace
 	 * and returning an array of results.
 	 */
-	private static String[] parseParserFunctionArgumentArray(String parserFunctionArguments) {
+	private static String[] parseParserFunctionArgumentArray(ParserInput parserInput, int mode, String parserFunctionArguments) throws ParserException {
 		if (StringUtils.isBlank(parserFunctionArguments)) {
 			return new String[0];
 		}
@@ -434,7 +434,7 @@ public class ParserFunctionUtil {
 		// trim results and store in array
 		int i = 0;
 		for (String argument : parserFunctionArgumentList) {
-			parserFunctionArgumentArray[i++] = argument.trim();
+			parserFunctionArgumentArray[i++] = JFlexParserUtil.parseFragment(parserInput, argument.trim(), mode);
 		}
 		return parserFunctionArgumentArray;
 	}
