@@ -1,0 +1,5 @@
+<!-- test templates that include curly braces -->
+{{{pipe}}
+{{pipe}}-
+{{pipe}} test
+{{pipe}}}
